# UChar

./: .gitignore  CMakeLists.txt  README.md  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.cfg  files.html  index.html  lint.sh  requirements.txt  test.sh  unicode__char_8h.html  unicode__char_8h_source.html  unicode__data_8h.html  unicode__data_8h_source.html
.github/: main.workflow
.github/workflows/: cpp-unit-test.yml  deploy.yml  main.yml  python-lint.yml
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  unicode__char_8h.html  unicode__data_8h_source.html
docs/html/search/: all_3.js  all_4.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
include/: unicode_char.h  unicode_data.h
script/: copyright.txt  gen.sh  gen_bidirectional_category.py  gen_canonical_combining_class.py  gen_cases.py  gen_code_value.py  gen_decomposition_mapping.py  gen_general_category.py  gen_header_close.py  gen_header_open.py  gen_manual.py  gen_mirrored.py  gen_normal_category.py  gen_numeric.py  unicode_char.h
scripts/: gen.sh  gen_bidirectional_category.py  gen_canonical_combining_class.py  gen_cases.py  gen_code_value.py  gen_decomposition_mapping.py  gen_general_category.py  gen_header_close.py  gen_header_open.py  gen_manual.py  gen_mirrored.py  gen_numeric.py  get_data.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  enums_0.js  enums_1.js  enums_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
src/: bidirectional_category.cpp  canonical_combining_class.cpp  cases.cpp  code_value.cpp  decomposition_mapping.cpp  encode.cpp  general_category.cpp  mirrored.cpp  normal_category.cpp  numeric.cpp  unicode_char.cpp
tests/: CMakeLists.txt  main.cpp  test_bidirectional_category_gen.cpp  test_canonical_combining_class.cpp  test_canonical_combining_class_gen.cpp  test_cases.cpp  test_decomposition_mapping_gen.cpp  test_encode.cpp  test_general_category.cpp  test_general_category_gen.cpp  test_mirrored.cpp  test_numeric.cpp
